# learning

./: .gitignore  README.md  main.cpp
Java/: DataTypeConversion.java  DataTypeVariable.java  test.java
Java/PluginLearn/: pom.xml
Java/sort/src/: Main.java  Sort.java
Java/untitled1/src/: DataTypeVariable.java  Hello.java  Main.java  bogoSort.java
Python/: a003.py
Rust/Slint/: Cargo.toml  index.html
Rust/Slint/src/: main.rs
Rust/Slint/ui/: app-window.slint
Rust/loops/src/: main.rs
cpp/: Eva 的回家作業.cpp  Print it all.cpp  a.cpp  hello.cpp  文文的求婚.cpp  最大公因數(GCD).cpp  求數列第 n 項.cpp
cpp/Hello World/: main.cpp
cpp/exercise12/: exercise1201.cpp
cpp/practice/: 11063 B2-Sequence.cpp
gjun/: .gitignore
gjun/C#/A20240316_01/: A20240316_01.sln
gjun/C#/A20240316_02/: A20240316_02.sln
gjun/C#/A20240323_01/: A20240316_02.sln
gjun/C++_程式語言/: C 語言標準函數庫分類.url
gjun/PythonAPCS2/: 01二進位與十進位.py  02一維陣列操作.py  03建立list.py  04二維陣列.py  05二維陣列輸入.py  06二維陣列複製.py  07二維陣列新增.py  08二維陣列插入與刪除.py  09串列.py  10串列2.py  11堆疊與佇列.py  12遞迴1.py  13遞迴2.py  14遞迴3.py  15氣泡排序.py  16sort.py  17二分搜尋法.py
gjun/PythonAPCS3/: b965. 2. 矩陣轉換.py  f580. 2. 骰子.py  h026. 202001_1 猜拳.py  k731. 1. 路徑偵測.py
gjun/c/: calculate.c  for.c  hello world.c  score.c  triangle.c  數字格式.c
go/: for.go
go/BF/: main.go
go/and/: main.go
go/func/: main.go
go/io/: main.go
go/loop/: main.go
go/pointer/: main.go
go/struct/: main.go
school/: Jupyter Notebook.url
school/113-2/: a.cxx  binary tree.cpp  binary tree.docx  oddunder100.cpp  password.cpp  ~$nary tree.docx
模板/: main.cpp
(+535 files in other folders)
